@@ -37,7 +37,6 @@ import java.util.Date;
 import java.util.Random;
 
 import javax.crypto.SecretKey;
-import javax.xml.bind.DatatypeConverter;
 
 import org.bouncycastle.jce.provider.BouncyCastleProvider;
 import org.bouncycastle.jce.spec.ECParameterSpec;
@@ -74,6 +73,7 @@ import com.netflix.msl.keyx.AsymmetricWrappedExchange.ResponseData;
 import com.netflix.msl.keyx.KeyExchangeFactory.KeyExchangeData;
 import com.netflix.msl.test.ExpectedMslException;
 import com.netflix.msl.tokens.MasterToken;
+import com.netflix.msl.util.Base64;
 import com.netflix.msl.util.JsonUtils;
 import com.netflix.msl.util.MockAuthenticationUtils;
 import com.netflix.msl.util.MockMslContext;
@@ -239,7 +239,7 @@ public class AsymmetricWrappedExchangeSuite {
                 final JSONObject keydata = jo.getJSONObject(KEY_KEYDATA);
                 assertEquals(KEYPAIR_ID, keydata.getString(KEY_KEY_PAIR_ID));
                 assertEquals(mechanism.toString(), keydata.getString(KEY_MECHANISM));
-                assertArrayEquals(publicKey.getEncoded(), DatatypeConverter.parseBase64Binary(keydata.getString(KEY_PUBLIC_KEY)));
+                assertArrayEquals(publicKey.getEncoded(), Base64.decode(keydata.getString(KEY_PUBLIC_KEY)));
             }
 
             @Test
@@ -321,7 +321,7 @@ public class AsymmetricWrappedExchangeSuite {
 
                 final byte[] encodedKey = publicKey.getEncoded();
                 final byte[] shortKey = Arrays.copyOf(encodedKey, encodedKey.length / 2);
-                keydata.put(KEY_PUBLIC_KEY, DatatypeConverter.printBase64Binary(shortKey));
+                keydata.put(KEY_PUBLIC_KEY, Base64.encode(shortKey));
 
                 new RequestData(keydata);
             }
@@ -451,8 +451,8 @@ public class AsymmetricWrappedExchangeSuite {
             assertEquals(MASTER_TOKEN, masterToken);
             final JSONObject keydata = jo.getJSONObject(KEY_KEYDATA);
             assertEquals(KEYPAIR_ID, keydata.getString(KEY_KEY_PAIR_ID));
-            assertArrayEquals(ENCRYPTION_KEY, DatatypeConverter.parseBase64Binary(keydata.getString(KEY_ENCRYPTION_KEY)));
-            assertArrayEquals(HMAC_KEY, DatatypeConverter.parseBase64Binary(keydata.getString(KEY_HMAC_KEY)));
+            assertArrayEquals(ENCRYPTION_KEY, Base64.decode(keydata.getString(KEY_ENCRYPTION_KEY)));
+            assertArrayEquals(HMAC_KEY, Base64.decode(keydata.getString(KEY_HMAC_KEY)));
         }
         
         @Test
@@ -659,9 +659,9 @@ public class AsymmetricWrappedExchangeSuite {
             final MasterToken masterToken = new MasterToken(ctx, renewalWindow, expiration, 1L, 1L, null, identity, encryptionKey, hmacKey);
             final String json = masterToken.toJSONString();
             final JSONObject jo = new JSONObject(json);
-            final byte[] signature = DatatypeConverter.parseBase64Binary(jo.getString("signature"));
+            final byte[] signature = Base64.decode(jo.getString("signature"));
             ++signature[1];
-            jo.put("signature", DatatypeConverter.printBase64Binary(signature));
+            jo.put("signature", Base64.encode(signature));
             final MasterToken untrustedMasterToken = new MasterToken(ctx, jo);
             return untrustedMasterToken;
         }
@@ -820,11 +820,11 @@ public class AsymmetricWrappedExchangeSuite {
                 final MasterToken masterToken = keyResponseData.getMasterToken();
 
                 final JSONObject keydata = keyResponseData.getKeydata();
-                final byte[] wrappedEncryptionKey = DatatypeConverter.parseBase64Binary(keydata.getString(KEY_ENCRYPTION_KEY));
+                final byte[] wrappedEncryptionKey = Base64.decode(keydata.getString(KEY_ENCRYPTION_KEY));
                 // I think I have to change length - 2 because of padding.
                 ++wrappedEncryptionKey[wrappedEncryptionKey.length-2];
-                keydata.put(KEY_ENCRYPTION_KEY, DatatypeConverter.printBase64Binary(wrappedEncryptionKey));
-                final byte[] wrappedHmacKey = DatatypeConverter.parseBase64Binary(keydata.getString(KEY_HMAC_KEY));
+                keydata.put(KEY_ENCRYPTION_KEY, Base64.encode(wrappedEncryptionKey));
+                final byte[] wrappedHmacKey = Base64.decode(keydata.getString(KEY_HMAC_KEY));
 
                 final KeyResponseData invalidKeyResponseData = new ResponseData(masterToken, KEYPAIR_ID, wrappedEncryptionKey, wrappedHmacKey);
                 factory.getCryptoContext(ctx, keyRequestData, invalidKeyResponseData, null);
@@ -840,11 +840,11 @@ public class AsymmetricWrappedExchangeSuite {
                 final MasterToken masterToken = keyResponseData.getMasterToken();
 
                 final JSONObject keydata = keyResponseData.getKeydata();
-                final byte[] wrappedHmacKey = DatatypeConverter.parseBase64Binary(keydata.getString(KEY_HMAC_KEY));
+                final byte[] wrappedHmacKey = Base64.decode(keydata.getString(KEY_HMAC_KEY));
                 // I think I have to change length - 2 because of padding.
                 ++wrappedHmacKey[wrappedHmacKey.length-2];
-                keydata.put(KEY_HMAC_KEY, DatatypeConverter.printBase64Binary(wrappedHmacKey));
-                final byte[] wrappedEncryptionKey = DatatypeConverter.parseBase64Binary(keydata.getString(KEY_ENCRYPTION_KEY));
+                keydata.put(KEY_HMAC_KEY, Base64.encode(wrappedHmacKey));
+                final byte[] wrappedEncryptionKey = Base64.decode(keydata.getString(KEY_ENCRYPTION_KEY));
 
                 final KeyResponseData invalidKeyResponseData = new ResponseData(masterToken, KEYPAIR_ID, wrappedEncryptionKey, wrappedHmacKey);
                 factory.getCryptoContext(ctx, keyRequestData, invalidKeyResponseData, null);
